feat: 集成 ChromaDB 向量数据库支持
添加 ChromaDB 作为向量数据库，用于 RAG 等场景
- 新增 core/vector_store.py 实现 ChromaDB 服务初始化
- 新增 utils/vector_utils.py 提供便捷操作接口
- 更新 README.md 添加使用文档
- 更新 requirements.txt 添加依赖
- 在 main.py 中添加测试用例

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,10 @@ langfuse>=2.40.0
 python-dotenv>=1.0.1
 PyYAML>=6.0.1
 
+# 向量数据库
+chromadb>=0.6.0
+sentence-transformers>=2.2.2
+
 # 开发与测试环境
 jupyter>=1.0.0
 notebook>=7.0.0
