--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,7 @@ sentence-transformers>=2.2.2
 jupyter>=1.0.0
 notebook>=7.0.0
 pytest>=8.0.0
+
+# Web API（用于流式对话 SSE）
+fastapi>=0.110.0
+uvicorn>=0.27.0
