--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ langchain-community>=0.2.10
 # 工具与监控
 langfuse>=2.40.0
 python-dotenv>=1.0.1
+requests>=2.32.0
 PyYAML>=6.0.1
+loguru>=0.7.2
 
 # 向量数据库
 chromadb>=0.6.0
