feat(文件处理): 添加文件上传和处理功能
实现文件上传接口和流式处理功能，支持PDF文件类型分析
- 添加/upload接口接收文件并保存到临时目录
- 添加/process/{file_id}/stream接口进行流式处理
- 实现PDF文件分析功能，区分扫描件和标准PDF
- 添加相关依赖(pdf2image, Pillow, numpy)

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,9 @@ pytest>=8.0.0
 # Web API（用于流式对话 SSE）
 fastapi>=0.110.0
 uvicorn>=0.27.0
+python-multipart>=0.0.9
+
+# 文件处理与图像分析
+pdf2image>=1.17.0
+Pillow>=10.0.0
+numpy>=1.26.0
